--- a/src/config.toml
+++ b/src/config.toml
@@ -1,3 +1,14 @@
 canonifyurls = true
 languageCode = "en-us"
 title = "Sparkfabrik tech blog"
+pygmentsUseClasses = true
+
+[[menu.main]]
+    name = "Blog"
+    url = "/"
+    weight = 1
+
+[[menu.main]]
+    name = "About"
+    url = "/page/about/"
+    weight = 2
