--- a/src/config.toml
+++ b/src/config.toml
@@ -3,7 +3,7 @@ languageCode = "en-us"
 title = "Tech @ Sparkfabrik"
 
 [Params]
-  logo = "img/avatar-icon.png"
+  logo = "img/sfgear.png"
   description = "Sparkfabrik tech blog"
 
 [Author]
