--- a/src/config.toml
+++ b/src/config.toml
@@ -1,6 +1,6 @@
 canonifyurls = true
 languageCode = "en-us"
-title = "Tech @ Sparkfabrik"
+title = "Tech @ SparkFabrik"
 
 [Params]
   logo = "img/sfgear.png"
