BBA post by Marcellino is now supporting new authoring system

--- a/src/config.toml
+++ b/src/config.toml
@@ -7,6 +7,7 @@ title = "Tech @ SparkFabrik"
   description = "Sparkfabrik tech blog"
 
   [Params.Authors]
+
     [Params.Authors.Stick]
       name = "Paolo Pustorino"
       role = "CEO"
@@ -31,6 +32,13 @@ title = "Tech @ SparkFabrik"
       github = "http://www.github.com/pinolo"
       twitter = "http://www.twitter.com/pinolo"
 
+    [Params.Authors.Marcello]
+      name = "Marcello Gorla"
+      role = "Frontend Developer"
+      picture = "http://www.sparkfabrik.com/images/team/mg.png"
+      bio = "Designer, developer and games addicted. Sometimes all three of them apply."
+      github = "http://www.github.com/mgdesign"
+      twitter = "http://www.twitter.com/mgdesign"
 
 [Author]
   name = "Sparkfabrik"
