--- a/src/config.toml
+++ b/src/config.toml
@@ -41,6 +41,14 @@ title = "Tech @ SparkFabrik"
       github = "http://www.github.com/mgdesign"
       twitter = "http://www.twitter.com/mgdesign"
 
+    [Params.Authors.Enrico]
+      name = "Enrico Sato"
+      role = "Frontend Developer"
+      picture = "http://www.sparkfabrik.com/images/team/enrico.jpg"
+      bio = "Web developer, bass player, tech lover. And a really really curious man."
+      github = "https://github.com/enricosato"
+      twitter = "https://twitter.com/RetiAlternative"
+
 [Author]
   name = "Sparkfabrik"
   email = "info@sparkfabrik.com"
