refs #000: use HTTPS for requests to SF website.

--- a/src/config.toml
+++ b/src/config.toml
@@ -12,7 +12,7 @@ title = "Tech @ SparkFabrik"
     [Params.Authors.Stick]
       name = "Paolo Pustorino"
       role = "CEO"
-      picture = "http://www.sparkfabrik.com/images/team/pusto.png"
+      picture = "https://www.sparkfabrik.com/images/team/pusto.png"
       bio = "Drummer, tabletop role-player and developer. Incidentally CEO and striving servant leader from 2013."
       github = "http://www.github.com/stickgrinder"
       twitter = "http://www.twitter.com/stickgrinder"
@@ -20,7 +20,7 @@ title = "Tech @ SparkFabrik"
     [Params.Authors.Paolo]
       name = "Paolo Mainardi"
       role = "CTO"
-      picture = "http://www.sparkfabrik.com/images/team/paolo.jpg"
+      picture = "https://www.sparkfabrik.com/images/team/paolo.jpg"
       bio = "Hacker, open-source enthusiast, reddit addicted and now proud founder of Sparkfabrik."
       github = "http://www.github.com/paolomainardi"
       twitter = "http://www.twitter.com/paolomainardi"
@@ -28,7 +28,7 @@ title = "Tech @ SparkFabrik"
     [Params.Authors.Pinolo]
       name = "Marcello Testi"
       role = "Lead Developer"
-      picture = "http://www.sparkfabrik.com/images/team/pinolo.png"
+      picture = "https://www.sparkfabrik.com/images/team/pinolo.png"
       bio = "Long-time open-source contributor, avid music listener. In Sparkfabrik since day-1."
       github = "http://www.github.com/pinolo"
       twitter = "http://www.twitter.com/pinolo"
@@ -36,7 +36,7 @@ title = "Tech @ SparkFabrik"
     [Params.Authors.Marcello]
       name = "Marcello Gorla"
       role = "Frontend Developer"
-      picture = "http://www.sparkfabrik.com/images/team/mg.png"
+      picture = "https://www.sparkfabrik.com/images/team/mg.png"
       bio = "Designer, developer and games addicted. Sometimes all three of them apply."
       github = "http://www.github.com/mgdesign"
       twitter = "http://www.twitter.com/mgdesign"
@@ -44,7 +44,7 @@ title = "Tech @ SparkFabrik"
     [Params.Authors.Enrico]
       name = "Enrico Sato"
       role = "Frontend Developer"
-      picture = "http://www.sparkfabrik.com/images/team/enrico.jpg"
+      picture = "https://www.sparkfabrik.com/images/team/enrico.jpg"
       bio = "Web developer, bass player, tech lover. And a really really curious man."
       github = "https://github.com/enricosato"
       twitter = "https://twitter.com/RetiAlternative"
@@ -52,7 +52,7 @@ title = "Tech @ SparkFabrik"
     [Params.Authors.Osvaldo]
       name = "Osvaldo Tulini"
       role = "backend Developer"
-      picture = "http://www.sparkfabrik.com/images/team/osvaldo.png"
+      picture = "https://www.sparkfabrik.com/images/team/osvaldo.png"
       bio = "Developer, Snowboarder"
       github = "https://github.com/osvaldot"
       twitter = "https://twitter.com/osvaldotulini"
@@ -60,7 +60,7 @@ title = "Tech @ SparkFabrik"
     [Params.Authors.Bladedu]
       name = "Marco Primitivo"
       role = "backend Developer"
-      picture = "http://www.sparkfabrik.com/images/team/marco_primitivo.jpg"
+      picture = "https://www.sparkfabrik.com/images/team/marco_primitivo.jpg"
       bio = "Software Developer, curious about everything, love to make experiments."
       github = "http://www.github.com/bladedu"
       twitter = "http://www.twitter.com/BladeduMP"
